@@ -1,13 +1,13 @@
 plugins {
     id 'java'
-    id 'com.github.johnrengelman.shadow' version '7.1.0'
     id 'jacoco'
 }
+
+group 'org.example'
 
 repositories {
     mavenCentral()
 }
-
 tasks.withType(JavaCompile) {
     options.compilerArgs += "--enable-preview"
 }
@@ -17,7 +17,6 @@ tasks.withType(Test) {
 tasks.withType(JavaExec) {
     jvmArgs += "--enable-preview"
 }
-
 dependencies {
     implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
@@ -27,6 +26,7 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jvmArgs(['--enable-preview'])
 }
 
 jacocoTestReport {
